--- a/new/style.css
+++ b/new/style.css
@@ -1,7 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<!-- Practice Website: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_containers_div_header-->
-<!-- Note to self-->
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
@@ -14,6 +11,7 @@
     body {background-color: #f8ffff}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #032658; -webkit-text-stroke: #032658}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658; min-height: 14.0px}
+    p.p4:after {content:' '; display:block; border:2px solid #d0d0d0;}
     p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #fba714; -webkit-text-stroke: #fba714}
     
     span.s1 {font-kerning: none}
@@ -28,18 +26,3 @@
    .button2:hover {background-color: #008CBA; color: white;}
   </style>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-
-<body>
-<div class="w3-container w3-hover-white" style="background-color: #f7f3dc;" >
-<!-- Title and header-->
-<h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Experience</b></span></h1>
-<div class="control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
-  <a href="index.html" class="button button1" style="margin: 0; color: black;">NewPage</a>
-  <a href="notes.html" class="button button1" style="margin: 0; color: black;">Coursework</a>
-  <a href="projects.html" class="button button1" style="margin: 0; color: black;">Projects</a>
-  <a href="experience.html" class="button button1" style="margin: 0; color: black;">Experience</a>
-  <a href="index.html" class="button button1" style="margin: 0; color: black;">NewPage</a>
-</div>
-</div>
