--- a/new/style.css
+++ b/new/style.css
@@ -20,3 +20,5 @@ a:visited {color: #29009c; background-color: transparent; text-decoration: under
 .button1:hover {background-color: #9FD1FF; color: #C09748;}
 .button2 {background-color: white; color: black; border: 2px solid #008CBA;}
 .button2:hover {background-color: #008CBA; color: white;}
+
+.center {margin: auto; width: 60%; padding: 0px;}
