--- a/new/style.css
+++ b/new/style.css
@@ -21,4 +21,4 @@ a:visited {color: #29009c; background-color: transparent; text-decoration: under
 .button2 {background-color: white; color: black; border: 2px solid #008CBA;}
 .button2:hover {background-color: #008CBA; color: white;}
 
-.center {margin: auto; width: 60%; padding: 0px;}
+.center {margin: auto; text-align: center; width: 60%; padding: 0px;}
