--- a/new/style.css
+++ b/new/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../Screenshot 2025-06-03 at 7.11.44.png');
+  <!--background-image: url('../Screenshot 2025-06-03 at 7.11.44.png');-->
   background-repeat: no-repeat;
   background-attachment: fixed; 
   background-size: 100% 100%;
