--- a/new/style.css
+++ b/new/style.css
@@ -1,5 +1,5 @@
 <!--body {background-image: url('../Screenshot 2025-06-03 at 7.11.44.png'); background-repeat: no-repeat; background-attachment: fixed;  background-size: 100% 100%; }-->
-<!--body {background-color: #f8ffff}-->
+<!--body {background-color: #ffffff}-->
 p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Verdana; color: #032658; -webkit-text-stroke: #032658}
 p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 18.0px Verdana; color: #032658; -webkit-text-stroke: #032658; min-height: 14.0px}
 p.p4:after {content:' '; display:block; border:2px solid #d0d0d0;}
